# demo

./: .gitignore  CMakeLists.txt
abi/: CMakeLists.txt  FileNew.cpp  FileNew.h  FileOld.cpp  FileOld.h  main.cpp
design_pattern/: CMakeLists.txt  README.md
design_pattern/template_method/: CMakeLists.txt  base.cpp  base.h  derivea.cpp  derivea.h  deriveb.cpp  deriveb.h  main.cpp
event_qt/: CMakeLists.txt  benchmark.cpp  event.cpp  event.h  event_p.h  eventcallproxy.cpp  eventcallproxy.h  eventhandler.cpp  eventhandler.h  eventhandler_p.h  fileeventhandler.cpp  fileeventhandler.h  main.cpp  windoweventhandler.cpp  windoweventhandler.h
event_qt/event/: event.cpp  event.h  eventcallproxy.h  eventhandler.cpp  eventhandler.h
messages_qt/: CMakeLists.txt  benchmark.cpp  main.cpp
messages_qt/message/: CMakeLists.txt  invokehelper.h  message.cpp  message.h  message_p.h  messagehelper.cpp  messagehelper.h
messages_qt/testa/: CMakeLists.txt  testa.cpp  testa.h
messages_qt/testb/: CMakeLists.txt  testb.cpp  testb.h
std_thread/: 01_thread.cpp  CMakeLists.txt
variadic_templates/: CMakeLists.txt  hash_value.cpp  print.cpp  tuple.cpp
